[FLINK-38103][table] Fix error for inline structured types in DataTypeFactory